fixed font-size on mobile

--- a/styles/layout/style.css
+++ b/styles/layout/style.css
@@ -28,7 +28,7 @@ main h1{
 }
 
 .welcome-header{
-  font-size: 3.8rem;
+  font-size: 3.5rem;
   margin: 0;
   margin-top: 15px;
 }
@@ -127,7 +127,7 @@ footer a{
 @media (min-width: 670px){
 
   .welcome-header{
-    font-size: 8.2rem;
+    font-size: 8rem;
     margin-bottom: -20px;
     margin-top: 25px;
   }
